--- a/styles/index.css
+++ b/styles/index.css
@@ -52,7 +52,7 @@ header h1 {
     top: 0;
     line-height: 75px;
     width: 150px;
-    background-image: url(../images/L3.png);
+    background-image: url(../images/websiteLogo.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -237,20 +237,19 @@ header h1 {
  * 4. 產品輪播 (Product Carousel)
  ************************************/
 
-.swiper {
+.productSwiper {
     width: 80vw;
-    height: 35vw;
+    height: 36vw;
 }
 
-.card {
+.productCard {
     max-width: 250px;
     line-height: 1.8;
     text-align: center;
     font-family: arial;
-
 }
 
-.card img {
+.productCard img {
     width: 100%;
 }
 
@@ -259,8 +258,9 @@ header h1 {
     font-size: 18px;
 }
 
-.card button {
+.productCard  button {
     border: none;
+    border-radius: 10px;
     outline: 0;
     padding: 12px;
     color: white;
@@ -271,18 +271,18 @@ header h1 {
     font-size: 18px;
 }
 
-.card button:hover {
+.productCard  button:hover {
     opacity: 0.7;
 }
 
 
 /************************************
- * 5. 區域過度
+ * 5. 區域過渡
  ************************************/
 
 .transition {
     width: 100vw;
-    height: 50vw;
+    height: 30vw;
     position: relative;
     background-color: rgba(127, 217, 255, 0.288);
     background-image: url(../images/transition1.png);
@@ -321,3 +321,26 @@ header h1 {
 
 }
 
+
+/************************************
+ * 5. 顧客評價
+ ************************************/
+
+.reviewSwiper {
+    width: 80vw;
+    height: 35vw;
+}
+
+.reviewCard {
+    max-width: 200px;
+    line-height: 1.8;
+    text-align: center;
+    font-family: arial;
+}
+
+.reviewCard img{
+    width: 100%;
+}
+.checked{
+    color: orange;
+}
