--- a/styles/index.css
+++ b/styles/index.css
@@ -13,13 +13,13 @@
  * 2. 頁首導覽列 (HEADER & NAVIGATION)
  ************************************/
 
-header {
-    background-color: rgb(30, 30, 30, 0.8);
+/* header {
+    background-color: rgb(30, 30, 30);
     width: 100vw;
     height: 75px;
     position: fixed;
     z-index: 999;
-    /*將header移到圖層上方*/
+ 
 }
 
 header a {
@@ -32,7 +32,7 @@ header a:hover {
 }
 
 header li {
-    /* 轉換成行內元素，並把li元素橫向排列 */
+
     display: inline;
     margin-right: 4vw;
 }
@@ -59,7 +59,7 @@ header h1 {
     background-color: transparent;
 
     text-indent: -9999px;
-}
+} */
 
 /************************************
  * 3. 咖啡豆產區介紹區 (BEANS INTRODUCTION SECTION)
@@ -239,11 +239,11 @@ header h1 {
 
 .productSwiper {
     width: 80vw;
-    height: 36vw;
+    height: 550px;
 }
 
 .productCard {
-    max-width: 250px;
+    max-width: 300px;
     line-height: 1.8;
     text-align: center;
     font-family: arial;
@@ -258,7 +258,7 @@ header h1 {
     font-size: 18px;
 }
 
-.productCard  button {
+.productCard button {
     border: none;
     border-radius: 10px;
     outline: 0;
@@ -271,7 +271,7 @@ header h1 {
     font-size: 18px;
 }
 
-.productCard  button:hover {
+.productCard button:hover {
     opacity: 0.7;
 }
 
@@ -282,7 +282,7 @@ header h1 {
 
 .transition {
     width: 100vw;
-    height: 30vw;
+    height: 32vw;
     position: relative;
     background-color: rgba(127, 217, 255, 0.288);
     background-image: url(../images/transition1.png);
@@ -292,7 +292,7 @@ header h1 {
 
 }
 
-#transitionSlogan{
+#transitionSlogan {
 
     position: absolute;
     top: 40%;
@@ -317,7 +317,7 @@ header h1 {
 
     margin-bottom: 10px;
 
-    font-size: 28px;
+    font-size: 35px;
 
 }
 
@@ -328,19 +328,94 @@ header h1 {
 
 .reviewSwiper {
     width: 80vw;
-    height: 35vw;
+    height: 300px;
 }
 
 .reviewCard {
+    border-radius: 10px;
     max-width: 200px;
-    line-height: 1.8;
+    line-height: 1.5;
     text-align: center;
     font-family: arial;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
-.reviewCard img{
-    width: 100%;
+.reviewCard h3 {
+    margin: 15px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
-.checked{
+
+.reviewCard p {
+    margin:10px;
+    color: #000000;
+    font-weight: bold;
+}
+
+.checked {
     color: orange;
+}
+
+
+/************************************
+ * 6. 訂閱
+ ************************************/
+
+.subscribe {
+    background-color: #485652;
+    color: white;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+}
+
+.subscribe p {
+
+    margin-bottom: 20px;
+}
+
+.subscribe input,
+.subscribe button {
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 20px;
+}
+
+.subscribe input {
+    width: 150px;
+    margin-right: 10px;
+}
+
+.subscribe button {
+    width: 80px;
+    cursor: pointer;
+}
+
+input::placeholder {
+    color: #DDDDDD;
+}
+
+input:focus {
+    outline: none;
+    border-color: #E0E9A3;
+}
+
+.menu {
+    display: none;
+}
+
+
+footer {
+    background-color: #000000;
+    color: #B7B7B7;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
